# petri

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VISION.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/rulesets/: dev.json  main.json
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE-V2.md  field-reports.md
docs/spikes/: harness-options.md  pi-e2e-evidence.md  pi-e2e-report.md  pi-rpc.md  pi_rpc_probe.py
docs/spikes/transcripts/: SUMMARY.json  auto_retry_off.jsonl  error_missing_key.jsonl  (+7 more)
docs/v2/: MIGRATION_PLAN.md
petri/: __init__.py  __main__.py  claude_code_provider.py  cli.py  cli_ui.py  colony.py  config.py  convergence.py  debate.py  decomposer.py  event_log.py  load_balancer.py  models.py  processor.py  propagation.py  queue.py  scanner.py  validators.py
petri/adapters/: base.py  claude_code.py  generators.py
petri/agents/: contract.py
petri/analysis/: convergence.py  scanner.py  validators.py
petri/assets/: deprecated-claim-pyramid.html
petri/cli/: __init__.py  _bootstrap.py  agents.py  check.py  connect.py  feed.py  graph.py  grow.py  init.py  inspect.py  launch.py  scan.py  seed.py  stop.py
petri/dashboard/: __init__.py  api.py  frontend.py  migrate.py
petri/defaults/: constitution.md  petri.yaml
petri/engine/: grow_loop.py  load_balancer.py  preflight.py  processor.py  propagation.py
petri/graph/: colony.py
petri/reasoning/: claude_code_provider.py  debate.py  decomposer.py  ingest.py
petri/storage/: event_log.py  paths.py  queue.py
petri/templates/: agent.txt  command.txt  frontend.html  rule_constitution.txt  rule_data_model.txt  rule_evidence_format.txt  rule_feedback_loop.txt  rule_research_methodology.txt  skill_convergence_check.txt  skill_event_log_read.txt  skill_event_log_write.txt  skill_queue_update.txt  skill_read_cell.txt  skill_read_node.txt
scripts/: apply_rulesets.py  create_v2_issues.py
tests/: conftest.py  test_petri_yaml.py
tests/integration/: test_adapter.py  test_cli.py  test_dashboard.py  test_seed_persistence.py
tests/unit/: test_claude_code_provider.py  test_cli_grow.py  test_cli_stop_file.py  test_cli_ui.py  test_colony.py  test_convergence.py  test_debate.py  test_decomposer.py  test_engine_grow_loop.py  test_event_log.py  test_models.py  test_processor_callbacks.py  test_processor_evidence_sources.py  test_processor_log_sources.py  test_processor_socratic.py  test_processor_stop_file.py  test_propagation.py  test_queue.py  test_scanner.py  test_seed.py  test_storage_paths.py
(+77 files in other folders)
